# Multi-Agent-Software-Engineering-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.override.yaml  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  container.py  errors.py  exceptions.py  lifespan.py  logging.py  middleware.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  domain.py  system.py
backend/app/parsing/: __init__.py  index.py
backend/app/prompts/: __init__.py
backend/app/repositories/: __init__.py  base.py  domain.py  system_metadata.py
backend/app/schemas/: auth.py  common.py  domain.py  indexing.py  pagination.py
backend/app/security/: passwords.py  tokens.py
backend/app/services/: auth.py  authorization.py  database.py  health.py  idempotency.py  indexing.py  ingestion.py  rate_limit.py  redis.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 20260618_0001_initial_system_metadata.py  20260701_0002_phase_5_parsing_symbols_and_indexing.py  7a0021405758_phase_3_domain_and_authentication_schema.py
backend/tests/: conftest.py
backend/tests/integration/: test_alembic.py  test_auth_endpoints.py  test_indexing_endpoints.py  test_repository_endpoints.py
backend/tests/unit/: test_api_conventions.py  test_auth_api_contract.py  test_auth_security.py  test_celery_config.py  test_correlation_id.py  test_health.py  (+10 more)
(+80 files in other folders)
