[project]
name = "codepilot-backend"
version = "0.1.0"
description = "CodePilot backend API and worker"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn>=0.30.0,<0.31.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "celery>=5.4.0,<6.0.0",
  "redis>=5.0.0,<6.0.0",
  "python-json-logger>=3.2.1,<4.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "mypy>=1.11.2,<2.0.0",
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.9,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]
exclude = [".uv-cache", ".venv", "dist", "build", "node_modules", "frontend/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
pretty = true
plugins = []
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "celery.*",
  "httpx.*",
  "redis.*",
  "uvicorn.*"
]
ignore_missing_imports = true
